# Listfun

./: LICENSE  Plotsgrid_ver1.0.py  README.md  listfun-ver1.1.py  listfun_ver1.0.py  listfun_ver1.2.py  packaging_folders__.py  packaging_upload__.ipynb  packaging_upload__.py  plotsgrid.py
Plotsgrid/: README.md  packaging_upload__.ipynb  setup.cfg  setup.py
Plotsgrid/plotsgrid/: __init__.py  plotsgrid.py
Plotsgrid/tests/: test_plotsgrid.py
plotsgrid.egg-info/: PKG-INFO  SOURCES.txt
