[metadata]
name = plotsgrid
version = 0.1.0
author = kgraghav
description = A package for creating grid plots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kgraghav/plotsgrid
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =[
        'seaborn','matplotlib']
python_requires = >=3.6
